# fictionops

./: CITATION.cff  LICENSE  README.md
fictionops/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  MANIFEST.in  README.md  README.zh-CN.md  pyproject.toml
fictionops/docs/: agent-connector-contract.md  agent-connector-contract.zh-CN.md  agent-evaluation-demo-report.md  agent-evaluation.md  agent-evaluation.zh-CN.md  agent-high-risk-regression-set.zh-CN.md  agent-integration.md  agent-integration.zh-CN.md  agent-protocol.md  agent-protocol.zh-CN.md  agent-runtime-completion-audit.zh-CN.md  agent-system-design.zh-CN.md  agent-workflow.md  agent-workflow.zh-CN.md  audit-priority.zh-CN.md  author-guards.zh-CN.md  cli-contracts.md  cli-contracts.zh-CN.md  cli.md  cli.zh-CN.md  codex-skill-generalization-report.md  compatibility.md  compatibility.zh-CN.md  completion-audit-0.1.0.zh-CN.md  counterevidence-blind-review.zh-CN.md  counterevidence-candidate-closure.zh-CN.md  counterevidence-controller-routing.zh-CN.md  counterevidence-evidence-window.zh-CN.md  counterevidence-ledger-application.zh-CN.md  counterevidence-minimal-reviser.zh-CN.md  dogfood-case-study.md  dogfood-case-study.zh-CN.md  dogfood-cycle-close-runbook.md  dogfood-cycle-close-runbook.zh-CN.md  dogfood-cycle-evidence.md  dogfood-cycle-evidence.zh-CN.md  dogfood-deepseek-2026-07-10.zh-CN.md  dogfood-jiangshan-ch26-counterevidence-2026-07-12.zh-CN.md  dogfood-legacy-adopt.zh-CN.md  dogfood-scene-writing-2026-07-11.zh-CN.md  (+51 more)
fictionops/examples/: agent_controller_loop.py  agent_runner_echo.py  (+5 more)
(+186 files in other folders)
