[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fictionops"
version = "0.1.1"
description = "A file-based operating system for long-form fiction planning, drafting, auditing, and publishing."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "FictionOps contributors" }
]
keywords = ["fiction", "writing", "novel", "workflow", "agent", "cli", "epub", "ai-assisted-writing"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/SouthWinter/fictionops"
Repository = "https://github.com/SouthWinter/fictionops"
Issues = "https://github.com/SouthWinter/fictionops/issues"
Documentation = "https://github.com/SouthWinter/fictionops/tree/main/fictionops/docs"

[project.scripts]
fictionops = "fictionops.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fictionops = ["templates/*.md", "templates/*.yml"]
